--- a/components/Registration/style.module.scss
+++ b/components/Registration/style.module.scss
@@ -8,6 +8,7 @@ $color-block-registration-hover: rgb(231, 231, 231);
   border-radius: 80rem;
   box-shadow: 0 0 50rem rgba(0, 0, 0, 0.5);
   transition: background-color 0.3s ease, transform 0.3s ease;
+  padding: 100rem 90rem;
   &:hover {
     background-color: $color-block-registration-hover;
   }
