I made the main Registration component (added inputs and labels). I also developed styles.

--- a/components/headerRegitration/style.module.scss
+++ b/components/headerRegitration/style.module.scss
@@ -2,6 +2,7 @@ $color-main-text: gray;
 $color-name-text: black;
 
 .text {
+  margin-bottom: 15rem;
   font-size: 30rem;
   font-weight: 700;
   color: $color-main-text;
