--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -15,3 +15,8 @@ body {
   justify-content: center;
   background-color: $background-window;
 }
+
+label {
+  display: inline-block;
+  min-width: 223rem;
+}
