change color border input

--- a/components/mainRegistration/style.module.scss
+++ b/components/mainRegistration/style.module.scss
@@ -17,7 +17,7 @@ $color-text-buttons: white;
     min-width: 335rem;
     min-height: 31rem;
     &:focus {
-      border: 1rem solid black;
+      border: 1rem solid #999999;
     }
   }
 
