--- a/components/mainRegistration/style.module.scss
+++ b/components/mainRegistration/style.module.scss
@@ -11,6 +11,7 @@ $color-text-buttons: white;
   }
 
   input {
+    padding-left: 5rem;
     outline: none;
     cursor: pointer;
     border-radius: 1rem;
