--- a/src/components/MainRegistration/style.module.scss
+++ b/src/components/MainRegistration/style.module.scss
@@ -1,4 +1,5 @@
 $background-color-buttons: #71c838;
+$background-color-buttons-stop: #949494;
 $color-text-buttons: white;
 $star-color: red;
 
@@ -38,6 +39,24 @@ $star-color: red;
   }
 }
 .button_container {
+  width: 56%;
+  display: flex;
+  justify-content: center;
+  .button_change_form {
+    background-color: $background-color-buttons;
+    color: $color-text-buttons;
+    padding: 8rem 20rem;
+    border-radius: 5rem;
+  }
+  .button_change_form_stop {
+    background-color: $background-color-buttons_stop;
+    color: $color-text-buttons;
+    padding: 8rem 20rem;
+    border-radius: 5rem;
+  }
+}
+
+.button_container_stop {
   width: 56%;
   display: flex;
   justify-content: center;
