--- a/src/components/MainRegistration/style.module.scss
+++ b/src/components/MainRegistration/style.module.scss
@@ -2,6 +2,7 @@ $background-color-buttons: #71c838;
 $background-color-buttons-stop: #949494;
 $color-text-buttons: white;
 $star-color: red;
+$color-footnotes: #999999;
 
 .block_recording_data {
   width: 100%;
@@ -39,9 +40,10 @@ $star-color: red;
   }
 }
 .button_container {
-  width: 56%;
   display: flex;
-  justify-content: center;
+  padding-left: 220rem;
+  align-items: center;
+
   .button_change_form {
     background-color: $background-color-buttons;
     color: $color-text-buttons;
@@ -53,6 +55,12 @@ $star-color: red;
     color: $color-text-buttons;
     padding: 8rem 20rem;
     border-radius: 5rem;
+  }
+  .date_and_time {
+    color: $color-footnotes;
+    font-size: 12rem;
+    font-weight: 400;
+    padding: 10rem;
   }
 }
 
@@ -70,6 +78,9 @@ $star-color: red;
 
 @media screen and (max-width: 600px) {
   .button_container {
+    text-align: center;
     width: 100%;
+    padding-left: 1rem;
+    display: block;
   }
 }
